# mpv

./: .gitignore  Build.nu  Build.ps1  Setup.nu  Setup.ps1  Start.ps1  meson.build  pyproject.toml
ci/: build-win32.ps1
