[project]
name = 'mpv'
version = '1'
requires-python = '>=3.13'
dependencies = [
    'cmake',
    'meson',
    'ninja',
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", "W", # pycodestyle
    "N", # pep8-naming
    "UP", # pyupgrade
    "A", # flake8-builtins
    "Q", # flake8-quotes
    "COM", # flake8-commas
]
